--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,6 +1,9 @@
+
+
 <div class="login-wrapper">
+    
     <div class="login-container">
-        <h1 class="app-title">PoolCarz</h1>
+        <h1 class="app-title">Login</h1>
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form">
             <div class="form-group">
                 <label for="username">Username</label>
